<resources>
    <string name="app_name">Hello</string>
    <string name="hello">Happy Birthday</string>
    <string name="from">Your Tom</string>
    <string name="btn_label">Button</string>
    <string name="hint_txt">Input your name</string>
    <string name="lable_add1">+1 point</string>
    <string name="lable_add2">+2 points</string>
    <string name="lable_add3">+3 points</string>
    <string name="btn_reset_lable">Reset</string>
    <string name="btn_dollar_lable">Dollar</string>
    <string name="btn_euro_lable">Euro</string>
    <string name="btn_won_lable">Won</string>
    <string name="rmb_hint">Input RMB</string>
    <string name="btn_opencfg_label">Config</string>
    <string name="btn_save_label">Save</string>
    <string name="menu_set_label" />
    <string name="label_open_list">OpenList</string>

</resources>